...
                detail: pokemonInfo?.weight.toString() ?? "",
              ),
              const SizedBox(
                width: 16.0,
              ),
              _renderDetail(
                title: "Height:",
                detail: pokemonInfo?.height.toString() ?? "",
              ),
            ],
          ),
        ],
      ),
...
